--- a/catalyst-ai-chat-main/package.json
+++ b/catalyst-ai-chat-main/package.json
@@ -32,7 +32,7 @@
     "geist": "^1.3.1",
     "nanoid": "^5.0.7",
     "next": "^14.2.6",
-    "next-auth": "5.0.0-beta.4",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "openai": "^4.56.0",
     "qs": "^6.13.0",
